# cmaketest

./: CMakeLists.txt  README.md  luci-compat_git-23.348.79870-22101eb_all.ipk  main.cpp
inc/: func1.hpp  func2.hpp
src/: func1.cpp  func2.cpp
subfunc/: CMakeLists.txt  subfunc.cpp  subfunc.hpp
subfunc/subsubfunc/: CMakeLists.txt  subsubfunc.cpp  subsubfunc.hpp
unit-test/: CMakeLists.txt  unit-test.cpp
